--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -19,15 +19,18 @@ export function Comparison({ a, b, invert, ...props }) {
   <div className="content-container">
     <div className="features-container">
       <div className="content-container">
-      # 입문자를 위한 4주 완성 웹 개발 핸드북
+      # 바닐라코딩 커리어 패스트트랙
 
       안녕하세요. 🙂
 
-      바닐라코딩의 입문자를 위한 4주 완성 웹 개발 핸드북에 방문해주셔서 감사합니다.
+      여러분의 취업을 위한 4주 완성 올인원 패키지, [커리어 패스트트랙](https://vanilla-coding.notion.site/12d37205ef948011a61df75c3a978d42)에 등록해주셔서 감사드립니다.
 
-      3가지 미니 프로젝트를 통해 HTML, CSS, JavaScript의 기초 문법부터 실제 사용법까지 폭 넓게 살펴보고, 여러분 스스로 코드를 작성할 수 있도록 탄탄한 기초 지식을 쌓는데 도움이 되었으면 좋겠습니다.
+      ## 코스 시작 전 할일
 
-      각 페이지 하단에 댓글을 달 수 있는 공간이 있으니, 궁금한 점은 언제든지 댓글 남겨주시면 답변드리도록 하겠습니다.
+      1. 메일로 전달된 사전 제출 양식에 대해 회신해주세요. 개인 프로젝트 정보를 기입하여 전달해주셔야 합니다.
+      2. 코스 시작 1일 전, 수업 ZOOM 링크가 메일로 전달됩니다. 잊지 마시고, 확인해주세요.
+
+      코스 시작일에 ZOOM에서 뵙도록 하겠습니다. 추가적으로 궁금한 점은 [채팅 문의](https://vanillacoding.channel.io/)로 연락주세요.
 
       감사합니다. 🙇🏻‍♂️
       </div>
