Update cs core camp contents

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -19,18 +19,15 @@ export function Comparison({ a, b, invert, ...props }) {
   <div className="content-container">
     <div className="features-container">
       <div className="content-container">
-      # 바닐라코딩 커리어 패스트트랙
+      # 바닐라코딩 CS 코어 캠프
 
       안녕하세요. 🙂
 
-      여러분의 취업을 위한 4주 완성 올인원 패키지, [커리어 패스트트랙](https://vanilla-coding.notion.site/12d37205ef948011a61df75c3a978d42)에 등록해주셔서 감사드립니다.
+      전공 지식 함양을 위한 4주 완성 코스 , CS 코어 캠프에 등록해주셔서 감사드립니다.
 
-      ## 코스 시작 전 할일
+      현재 보시는 페이지는 코스 진행 과정에서 코스 콘텐츠가 공유될 페이지입니다.
 
-      1. 메일로 전달된 사전 제출 양식에 대해 회신해주세요. 개인 프로젝트 정보를 기입하여 전달해주셔야 합니다.
-      2. 코스 시작 1일 전, 수업 ZOOM 링크가 메일로 전달됩니다. 잊지 마시고, 확인해주세요.
-
-      코스 시작일에 ZOOM에서 뵙도록 하겠습니다. 추가적으로 궁금한 점은 [채팅 문의](https://vanillacoding.channel.io/)로 연락주세요.
+      코스 관련 안내사항은 코스 시작 1주일 전, 메일로 전달드릴 예정입니다. 관련하여 궁금한 점은 [채팅 문의](https://vanillacoding.channel.io/)로 연락주세요.
 
       감사합니다. 🙇🏻‍♂️
       </div>
